--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@
             border-radius: 8px;
             padding: 10px;
             margin: 0 auto;
+            max-width: 90vw;
+            box-sizing: border-box;
         }
 
         .field-cell {
@@ -196,6 +198,9 @@
             font-size: 0.9em;
             border-radius: 3px;
             transition: transform 0.2s;
+            min-width: 0;
+            min-height: 0;
+            box-sizing: border-box;
         }
 
         .field-cell:hover {
@@ -290,6 +295,18 @@
             background: #f8d7da;
             color: #721c24;
             border: 1px solid #f5c6cb;
+        }
+
+        @media (max-width: 768px) {
+            .field-grid {
+                max-width: 95vw;
+                padding: 5px;
+                gap: 1px;
+            }
+            
+            .field-cell {
+                font-size: 0.8em;
+            }
         }
 
         @media (max-width: 768px) {
@@ -561,6 +578,7 @@
             const fieldGrid = document.createElement('div');
             fieldGrid.className = 'field-grid';
             fieldGrid.style.gridTemplateColumns = `repeat(${size}, 1fr)`;
+            fieldGrid.style.width = `min(90vw, ${size * 40}px)`;
 
             for (let i = 0; i < size; i++) {
                 for (let j = 0; j < size; j++) {
